@@ -809,32 +809,11 @@ operator|.
 name|clearQueueMetrics
 argument_list|()
 expr_stmt|;
-name|MetricsSystem
-name|ms
-init|=
-name|DefaultMetricsSystem
-operator|.
-name|instance
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|ms
-operator|.
-name|getSource
-argument_list|(
-literal|"ClusterMetrics"
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
 name|DefaultMetricsSystem
 operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 DECL|method|checkMonitorHealth ()
 specifier|private
