@@ -178,6 +178,9 @@ Release 2.5.0 - UNRELEASED
     YARN-2074. Changed ResourceManager to not count AM preemptions towards app
     failures. (Jian He via vinodkv)
 
+    YARN-2192. TestRMHA fails when run with a mix of Schedulers.
+    (Anubhav Dhoot via kasha)
+
   OPTIMIZATIONS
 
   BUG FIXES 
